# PyZerolog

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
examples/: fields_example.ipynb
tests/: root.py  test.py  test_added_values.py  test_base.py  test_console_formatter.py  test_fields.py  test_json_formatter.py
zlog/: __init__.py  fields.py  formatters.py  level.py  main.py
